--- a/styleguide/scss/custom/_forms.scss
+++ b/styleguide/scss/custom/_forms.scss
@@ -245,7 +245,7 @@ form, [role="form"] {
 
                 label {
 
-                    display: block;
+                    display: inline-block;
                     position: relative;
 
                     padding-left: 1.6rem;
