--- a/styleguide/scss/core/_core-lists-and-tables.scss
+++ b/styleguide/scss/core/_core-lists-and-tables.scss
@@ -52,4 +52,181 @@
 // STYLES
 //-----------------------------------------------------------------------//
 
-// TBD
+// Where `margin-left` is concerned, we want to try and indent certain elements
+// by a consistent amount
+ul, dd {
+
+    margin-left: 1.25rem;
+    padding: 0;
+
+    @include sf-media($from: tablet-portrait) {
+
+        margin-left: 0.65rem;
+    }
+}
+
+ul {
+
+    margin-left: 2.75rem;
+    margin-right: 0;
+    margin-bottom: 2.25rem;
+    margin-top: 1.75rem;
+
+    list-style: square;
+
+    @include sf-media($from: tablet-portrait) {
+
+        margin-left: 2.75rem;
+        margin-right: 0;
+        margin-bottom: 2rem;
+        margin-top: 1.5rem;
+    }
+
+    &:last-child {
+
+        margin-bottom: 0;
+    }
+}
+
+ol {
+
+    list-style-type: none;
+    counter-reset: item;
+    margin: 0;
+    margin-bottom: 2rem;
+    padding: 0;
+    margin-left: 0.1rem;
+
+    & > li {
+
+        display: table;
+        counter-increment: item;
+
+        &:before {
+
+          content: counters(item, ".") ". ";
+          display: table-cell;
+          padding-right: 0.5rem;
+          white-space: nowrap;
+        }
+
+        & > ol {
+        
+            & > li {
+
+                margin: 0;
+
+                &:before {
+
+                    content: counters(item, ".") " ";
+                }
+            }
+        }
+    }
+
+    &:last-child {
+
+        margin-bottom: 0;
+    }
+}
+
+li, dt {
+
+    padding-top: 1rem;
+
+    @include sf-media($from: tablet-portrait) {
+
+        padding-top: 1rem;
+    }
+
+    & > p {
+
+        &:last-of-type {
+
+            margin-bottom: 0;
+        }
+    }
+
+  	&:first-child {
+
+        padding-top: 0;
+  	}
+
+    & > ol, & > ul {
+    
+        margin-top: 1rem;
+
+        & > li {
+
+            &:first-child {
+
+                padding-top: 0;
+            }
+        }
+    }
+}
+
+ol, ul, dl {
+
+    &.roomy {
+
+        margin-top: 2rem;
+
+        @include sf-media($from: tablet-portrait) {
+
+            margin-top: 2rem;
+        }
+
+        & > li, & > dt {
+
+            padding-top: 2rem;
+
+            &:first-child {
+
+                padding-top: 0;
+            }
+        }
+    }
+
+    &:last-child {
+
+        margin-bottom: 0;
+    }
+}
+
+table {
+
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+
+    &:last-child {
+
+        margin-bottom: 0;
+    }
+
+    th, td {
+
+        padding: 0;
+        margin: 0;
+        text-align: left;
+        padding-top: 0.5rem;
+        padding-right: 1rem;
+
+        @include sf-media($from: tablet-portrait) {
+
+            padding-top: 0.75rem;
+            padding-right: 1.25rem;
+        }
+
+      	&:last-child {
+
+            padding-right: 0;
+      	}
+    }
+
+    th {
+
+        font-weight: bold;
+    }
+}
