--- a/styleguide/scss/core/_core-typography.scss
+++ b/styleguide/scss/core/_core-typography.scss
@@ -15,6 +15,120 @@
 // STYLES
 //-----------------------------------------------------------------------//
 
+a {
+
+    color: sf-get-color(primary);
+
+    text-decoration: none;
+
+    &:hover {
+
+        text-decoration: underline;
+        cursor: pointer;
+    }
+}
+
+h1, h2, h3, h4, h5, h6 {
+
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+
+    font-weight: 400;
+
+    @include sf-media($from: tablet-portrait) {
+
+        margin-top: 1rem;
+    }
+
+    &:last-child {
+
+        margin-bottom: 0;
+    }
+
+    > a {
+
+        font-weight: 400;
+    }
+}
+
+h1 + h1, h1 + h2, h1 + h3, h1 + h4, h1 + h5, h1 + h6,
+h2 + h1, h2 + h2, h2 + h3, h2 + h4, h2 + h5, h2 + h6,
+h3 + h1, h3 + h2, h3 + h3, h3 + h4, h3 + h5, h3 + h6,
+h4 + h1, h4 + h2, h4 + h3, h4 + h4, h4 + h5, h4 + h6,
+h5 + h1, h5 + h2, h5 + h3, h5 + h4, h5 + h5, h5 + h6,
+h6 + h1, h6 + h2, h6 + h3, h6 + h4, h6 + h5, h6 + h6
+{
+    margin-top: 0;
+}
+
+p {
+
+    margin-bottom: 1.5rem;
+
+    &:last-child {
+
+        margin-bottom: 0;
+    }
+}
+
+blockquote {
+
+    border-left: solid 0px sf-get-background-color(graylightest);
+    border-left-width: 0.75rem;
+
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 2.25rem;
+    margin-top: 1.75rem;
+
+    padding-left: 1.3344rem;
+    padding-right: 1.3344rem;
+
+    font-size: 1.2rem;
+
+    @include sf-media($from: tablet-portrait) {
+
+        margin-left: 1.5rem;
+        margin-right: 0;
+        margin-bottom: 2rem;
+        margin-top: 1.5rem;
+
+        padding-left: 1.5rem;
+        padding-right: 4.0rem;
+    }
+
+    &:last-child {
+
+        margin-bottom: 0;
+    }
+
+    cite {
+
+        display: block;
+        margin-top: 1.5rem;
+
+        @include sf-media($from: tablet-portrait) {
+
+            margin-top: 1.25rem;
+        }
+    }
+}
+
+strong {
+
+    font-weight: 700;
+
+    em {
+        font-weight: 700;
+    }
+}
+
+small {
+
+    font-size: 0.8rem;
+    line-height: 1.3rem;
+}
+
 pre, code {
 
     display: block;
@@ -54,14 +168,12 @@ pre, code {
     &:not([class*="language-"]) {
 
         @include sf-margin-vertical(0.8896rem);
-        @include sf-padding-vertical(0.4448rem);
-        @include sf-padding-horizontal(0.6672rem);
+        padding: 0.4448rem 1.25rem;
 
         @include sf-media($from: tablet-portrait) {
 
             @include sf-margin-vertical(1.34rem);
-            @include sf-padding-vertical(0.67rem);
-            @include sf-padding-horizontal(1.005rem);
+            padding: 0.67rem 1.005rem;
         }
     }
 }
@@ -82,43 +194,63 @@ pre[class*="language-"] {
     }
 }
 
-pre {
+pre, pre[class*="language-"] {
+
+    border-radius: 0;
+    margin: 1rem 0;
+    margin-bottom: 1.5rem;
+    padding: 1.5rem $horizontal-margin;
+    
+    @include sf-media($from: tablet-portrait) {
+
+        border-radius: 0.25rem;
+        margin: 1rem 0;
+        margin-bottom: 1.5rem;
+        padding: 1rem;
+    }
 
     & > code {
 
         display: block;
     }
-}
 
-blockquote {
+    &:last-child {
 
-    border-left: solid 0px sf-get-background-color(graylightest);
-    border-left-width: 0.4448rem;
-
-    padding-left: 1.3344rem;
-    padding-right: 1.3344rem;
-    @include sf-margin-vertical(1.7792rem);
-    @include sf-margin-horizontal(0);
-
-    @include sf-media($from: tablet-portrait) {
-
-        border-left-width: 0.67rem;
-        padding-left: 1.675rem;
-        padding-right: 4.02rem;
-        @include sf-margin-vertical(1.675rem);
-        @include sf-margin-horizontal(2.68rem);
+        margin-bottom: 0;
     }
 }
 
-h1, h2, h3, h4, h5, h6 {
+pre {
 
-    margin-top: 0;
-    margin-bottom: 1.112rem;
+    @include sf-media($upto: tablet-portrait) {
+    
+        @include sf-margin-horizontal(-1.112rem);
+    }
+}
 
-    font-weight: 400;
+code[class*="language-"], pre[class*="language-"] {
+
+    text-shadow: none !important;
+    overflow: hidden;
+}
+
+hr {
+
+    margin: 0;
+    margin-top: 5rem;
+    margin-bottom: 2rem;
+    height: 0.15rem;
+    min-height: 0.15rem;
+    border: none;
+    border-color: sf-get-color(graylighter);
+    border-bottom-width: 0.15rem;
+    border-bottom-style: solid;
 
     @include sf-media($from: tablet-portrait) {
 
-        margin-bottom: 1.675rem;
+        height: 0.1rem;
+        min-height: 0.1rem;
+        border-bottom-width: 0.1rem;
     }
 }
+
