--- a/styleguide/scss/_config.scss
+++ b/styleguide/scss/_config.scss
@@ -124,7 +124,7 @@ $base-colors: (
     brown:             (#845c27, #ffffff, #ffffff, #ffffff),
     pink:              (#e0b0af, darken(#e0b0af, 50%), darken(#e0b0af, 50%), darken(#e0b0af, 50%)),
     gold:              (#b39d68, #ffffff, #ffffff, #ffffff),
-    platinum:            (#b8aa8b, #ffffff, #ffffff, #ffffff)
+    platinum:          (#b8aa8b, #ffffff, #ffffff, #ffffff)
 );
 
 // Theme Colors Quads
@@ -151,7 +151,8 @@ $theme-colors: (
 );
 
 // REQUIRED: Form fields color assignments
-$disabled-field-bg-color: sf-get-background-color(graylightest);
+$disabled-field-bg-color: #f5f5f5;
+$disabled-field-fg-color: #ababab;
 
 // Line Widths:
 // Used by the style guide layout to define line thicknesses for borders, 
