--- a/styleguide/scss/_manifest.scss
+++ b/styleguide/scss/_manifest.scss
@@ -19,6 +19,7 @@
 
 // CORE ELEMENT PARTIALS; DO NOT EDIT
 @import "core/core-color";
+@import "core/core-buttons";
 @import "core/core-forms";
 @import "core/core-lists-and-tables";
 @import "core/core-typography";
