Checked checkbox has no border

--- a/styleguide/scss/core/_core-forms.scss
+++ b/styleguide/scss/core/_core-forms.scss
@@ -328,6 +328,7 @@ form, [role="form"] {
                     &:checked {
                     
                         background-color: sf-get-color(blue);
+                        border: none;
                     }
                 }
 
