--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -1221,9 +1221,10 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"]:c
 [role="form"] fieldset ul[role="listbox"] [role="menuitemradio"] input[type="checkbox"]:checked, [role="form"] fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"]:checked,
 [role="form"] fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"]:checked {
   background-color: #1187ff;
+  border: none;
 }
 
-/* line 338, styleguide/scss/core/_core-forms.scss */
+/* line 339, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"][disabled],
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"][disabled],
 form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="radio"][disabled],
@@ -1240,7 +1241,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"][d
   cursor: not-allowed;
 }
 
-/* line 347, styleguide/scss/core/_core-forms.scss */
+/* line 348, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="file"], [role="form"] fieldset [role="file"] {
   display: inline-block;
   min-width: 50%;
@@ -1251,13 +1252,13 @@ form fieldset [role="file"], [role="form"] fieldset [role="file"] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 347, styleguide/scss/core/_core-forms.scss */
+  /* line 348, styleguide/scss/core/_core-forms.scss */
   form fieldset [role="file"], [role="form"] fieldset [role="file"] {
     border-width: 0.08rem;
   }
 }
 
-/* line 366, styleguide/scss/core/_core-forms.scss */
+/* line 367, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"], [role="form"] fieldset [role="listbox"] {
   display: inline-block;
   min-width: 50%;
@@ -1274,25 +1275,25 @@ form fieldset [role="listbox"], [role="form"] fieldset [role="listbox"] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 366, styleguide/scss/core/_core-forms.scss */
+  /* line 367, styleguide/scss/core/_core-forms.scss */
   form fieldset [role="listbox"], [role="form"] fieldset [role="listbox"] {
     border-width: 0.08rem;
   }
 }
 
-/* line 390, styleguide/scss/core/_core-forms.scss */
+/* line 391, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"][multiple], [role="form"] fieldset [role="listbox"][multiple] {
   background: none;
   padding: 0;
   overflow: hidden;
 }
 
-/* line 397, styleguide/scss/core/_core-forms.scss */
+/* line 398, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select::-ms-expand, [role="form"] fieldset [role="listbox"] select::-ms-expand {
   display: none;
 }
 
-/* line 402, styleguide/scss/core/_core-forms.scss */
+/* line 403, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select, [role="form"] fieldset [role="listbox"] select {
   width: 100%;
   max-width: 100%;
@@ -1309,24 +1310,24 @@ form fieldset [role="listbox"] select, [role="form"] fieldset [role="listbox"] s
   color: #2b303a;
 }
 
-/* line 422, styleguide/scss/core/_core-forms.scss */
+/* line 423, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select:focus, [role="form"] fieldset [role="listbox"] select:focus {
   outline: none;
 }
 
-/* line 428, styleguide/scss/core/_core-forms.scss */
+/* line 429, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select::-ms-expand, [role="form"] fieldset [role="listbox"] select::-ms-expand {
   background-color: transparent;
   border: 0;
 }
 
-/* line 434, styleguide/scss/core/_core-forms.scss */
+/* line 435, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select[multiple], [role="form"] fieldset [role="listbox"] select[multiple] {
   padding-right: 0;
   height: auto;
 }
 
-/* line 439, styleguide/scss/core/_core-forms.scss */
+/* line 440, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select[multiple] option, [role="form"] fieldset [role="listbox"] select[multiple] option {
   padding: 0.5rem 0.75rem;
   min-height: 1.5rem;
@@ -1334,60 +1335,60 @@ form fieldset [role="listbox"] select[multiple] option, [role="form"] fieldset [
   border-radius: 0.15rem;
 }
 
-/* line 450, styleguide/scss/core/_core-forms.scss */
+/* line 451, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"], [role="form"] fieldset ul[role="listbox"] {
   padding: 0;
   border: none;
   background: none;
 }
 
-/* line 459, styleguide/scss/core/_core-forms.scss */
+/* line 460, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] label, form fieldset .has-error label, [role="form"] fieldset[error] label, [role="form"] fieldset .has-error label {
   color: #b94a48;
 }
 
-/* line 463, styleguide/scss/core/_core-forms.scss */
+/* line 464, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] label span.field-validation-error, form fieldset .has-error label span.field-validation-error, [role="form"] fieldset[error] label span.field-validation-error, [role="form"] fieldset .has-error label span.field-validation-error {
   display: inline-block;
   padding-top: 0.75rem;
 }
 
-/* line 468, styleguide/scss/core/_core-forms.scss */
+/* line 469, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] label span.field-validation-error:empty, form fieldset .has-error label span.field-validation-error:empty, [role="form"] fieldset[error] label span.field-validation-error:empty, [role="form"] fieldset .has-error label span.field-validation-error:empty {
   display: none;
 }
 
-/* line 475, styleguide/scss/core/_core-forms.scss */
+/* line 476, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] .select-field-wrapper, form fieldset[error] .input-field-wrapper, form fieldset[error] .textarea-field-wrapper, form fieldset .has-error .select-field-wrapper, form fieldset .has-error .input-field-wrapper, form fieldset .has-error .textarea-field-wrapper, [role="form"] fieldset[error] .select-field-wrapper, [role="form"] fieldset[error] .input-field-wrapper, [role="form"] fieldset[error] .textarea-field-wrapper, [role="form"] fieldset .has-error .select-field-wrapper, [role="form"] fieldset .has-error .input-field-wrapper, [role="form"] fieldset .has-error .textarea-field-wrapper {
   border-color: #b94a48;
 }
 
-/* line 479, styleguide/scss/core/_core-forms.scss */
+/* line 480, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] .select-field-wrapper input, form fieldset[error] .select-field-wrapper select, form fieldset[error] .select-field-wrapper textarea, form fieldset[error] .input-field-wrapper input, form fieldset[error] .input-field-wrapper select, form fieldset[error] .input-field-wrapper textarea, form fieldset[error] .textarea-field-wrapper input, form fieldset[error] .textarea-field-wrapper select, form fieldset[error] .textarea-field-wrapper textarea, form fieldset .has-error .select-field-wrapper input, form fieldset .has-error .select-field-wrapper select, form fieldset .has-error .select-field-wrapper textarea, form fieldset .has-error .input-field-wrapper input, form fieldset .has-error .input-field-wrapper select, form fieldset .has-error .input-field-wrapper textarea, form fieldset .has-error .textarea-field-wrapper input, form fieldset .has-error .textarea-field-wrapper select, form fieldset .has-error .textarea-field-wrapper textarea, [role="form"] fieldset[error] .select-field-wrapper input, [role="form"] fieldset[error] .select-field-wrapper select, [role="form"] fieldset[error] .select-field-wrapper textarea, [role="form"] fieldset[error] .input-field-wrapper input, [role="form"] fieldset[error] .input-field-wrapper select, [role="form"] fieldset[error] .input-field-wrapper textarea, [role="form"] fieldset[error] .textarea-field-wrapper input, [role="form"] fieldset[error] .textarea-field-wrapper select, [role="form"] fieldset[error] .textarea-field-wrapper textarea, [role="form"] fieldset .has-error .select-field-wrapper input, [role="form"] fieldset .has-error .select-field-wrapper select, [role="form"] fieldset .has-error .select-field-wrapper textarea, [role="form"] fieldset .has-error .input-field-wrapper input, [role="form"] fieldset .has-error .input-field-wrapper select, [role="form"] fieldset .has-error .input-field-wrapper textarea, [role="form"] fieldset .has-error .textarea-field-wrapper input, [role="form"] fieldset .has-error .textarea-field-wrapper select, [role="form"] fieldset .has-error .textarea-field-wrapper textarea {
   color: #b94a48;
 }
 
-/* line 485, styleguide/scss/core/_core-forms.scss */
+/* line 486, styleguide/scss/core/_core-forms.scss */
 form fieldset[error]:empty, form fieldset .has-error:empty, [role="form"] fieldset[error]:empty, [role="form"] fieldset .has-error:empty {
   display: none;
 }
 
-/* line 493, styleguide/scss/core/_core-forms.scss */
+/* line 494, styleguide/scss/core/_core-forms.scss */
 form fieldset[success] label, [role="form"] fieldset[success] label {
   color: #468847;
 }
 
-/* line 498, styleguide/scss/core/_core-forms.scss */
+/* line 499, styleguide/scss/core/_core-forms.scss */
 form fieldset[success] .select-field-wrapper, form fieldset[success] .input-field-wrapper, form fieldset[success] .textarea-field-wrapper, [role="form"] fieldset[success] .select-field-wrapper, [role="form"] fieldset[success] .input-field-wrapper, [role="form"] fieldset[success] .textarea-field-wrapper {
   border-color: #468847;
 }
 
-/* line 502, styleguide/scss/core/_core-forms.scss */
+/* line 503, styleguide/scss/core/_core-forms.scss */
 form fieldset[success] .select-field-wrapper input, form fieldset[success] .select-field-wrapper select, form fieldset[success] .select-field-wrapper textarea, form fieldset[success] .input-field-wrapper input, form fieldset[success] .input-field-wrapper select, form fieldset[success] .input-field-wrapper textarea, form fieldset[success] .textarea-field-wrapper input, form fieldset[success] .textarea-field-wrapper select, form fieldset[success] .textarea-field-wrapper textarea, [role="form"] fieldset[success] .select-field-wrapper input, [role="form"] fieldset[success] .select-field-wrapper select, [role="form"] fieldset[success] .select-field-wrapper textarea, [role="form"] fieldset[success] .input-field-wrapper input, [role="form"] fieldset[success] .input-field-wrapper select, [role="form"] fieldset[success] .input-field-wrapper textarea, [role="form"] fieldset[success] .textarea-field-wrapper input, [role="form"] fieldset[success] .textarea-field-wrapper select, [role="form"] fieldset[success] .textarea-field-wrapper textarea {
   color: #468847;
 }
 
-/* line 510, styleguide/scss/core/_core-forms.scss */
+/* line 511, styleguide/scss/core/_core-forms.scss */
 form fieldset [disabled],
 form fieldset [readonly], [role="form"] fieldset [disabled],
 [role="form"] fieldset [readonly] {
@@ -1395,12 +1396,12 @@ form fieldset [readonly], [role="form"] fieldset [disabled],
   opacity: 1;
 }
 
-/* line 517, styleguide/scss/core/_core-forms.scss */
+/* line 518, styleguide/scss/core/_core-forms.scss */
 form fieldset [disabled], [role="form"] fieldset [disabled] {
   cursor: not-allowed;
 }
 
-/* line 521, styleguide/scss/core/_core-forms.scss */
+/* line 522, styleguide/scss/core/_core-forms.scss */
 form fieldset [disabled] input, form fieldset [disabled] textarea, [role="form"] fieldset [disabled] input, [role="form"] fieldset [disabled] textarea {
   color: #ababab;
   cursor: not-allowed;
