--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -1081,7 +1081,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] label, [role="form"] fie
   form fieldset ol[role="listbox"] [role="menuitemradio"] label, [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"] label,
   [role="form"] fieldset ul[role="listbox"] [role="menuitemradio"] label, [role="form"] fieldset ol[role="listbox"] [role="menuitemcheckbox"] label,
   [role="form"] fieldset ol[role="listbox"] [role="menuitemradio"] label {
-    padding-left: 1.75rem;
+    padding-left: 1.5rem;
   }
 }
 
@@ -1128,36 +1128,15 @@ form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="radio"], for
 form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="radio"], [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
 [role="form"] fieldset ul[role="listbox"] [role="menuitemradio"] input[type="radio"], [role="form"] fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
 [role="form"] fieldset ol[role="listbox"] [role="menuitemradio"] input[type="radio"] {
-  position: absolute;
-  top: 0.1rem;
-  margin-left: -1.3rem;
+  display: inline-block;
+  position: relative;
+  margin-left: -1.4rem;
+  width: 1rem;
+  height: 1rem;
+  margin-right: 0.4rem;
 }
 
-@media screen and (min-width: 33.75em) {
-  /* line 276, styleguide/scss/core/_core-forms.scss */
-  form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
-  form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="radio"], form fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
-  form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="radio"], [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
-  [role="form"] fieldset ul[role="listbox"] [role="menuitemradio"] input[type="radio"], [role="form"] fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
-  [role="form"] fieldset ol[role="listbox"] [role="menuitemradio"] input[type="radio"] {
-    top: 0.15rem;
-    margin-left: -1.5rem;
-  }
-}
-
-@media screen and (min-width: 50em) {
-  /* line 276, styleguide/scss/core/_core-forms.scss */
-  form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
-  form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="radio"], form fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
-  form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="radio"], [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
-  [role="form"] fieldset ul[role="listbox"] [role="menuitemradio"] input[type="radio"], [role="form"] fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
-  [role="form"] fieldset ol[role="listbox"] [role="menuitemradio"] input[type="radio"] {
-    top: 0.15rem;
-    margin-left: -1.5rem;
-  }
-}
-
-/* line 294, styleguide/scss/core/_core-forms.scss */
+/* line 286, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"][disabled],
 fieldset[disabled] form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
 form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="radio"][disabled],
@@ -1178,7 +1157,7 @@ fieldset[disabled]
   cursor: not-allowed;
 }
 
-/* line 298, styleguide/scss/core/_core-forms.scss */
+/* line 290, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
 form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="checkbox"], form fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
 form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"], [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
@@ -1186,25 +1165,25 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"], 
 [role="form"] fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"] {
   display: inline-block;
   position: relative;
-  margin-left: -1.75rem;
+  margin-left: -1.5rem;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   outline: none;
-  vertical-align: text-bottom;
+  vertical-align: text-top;
+  width: 1rem;
+  height: 1rem;
+  margin-right: 0.5rem;
   font-size: 1rem;
-  line-height: 1rem;
+  line-height: 1;
   background-color: white;
   border-radius: 0.14rem;
   border: 0.07rem solid rgba(0, 0, 0, 0.25);
-  width: 1.2rem;
-  height: 1.2rem;
-  margin-right: 0.5rem;
   cursor: pointer;
 }
 
 @media screen and (min-width: 50em) {
-  /* line 298, styleguide/scss/core/_core-forms.scss */
+  /* line 290, styleguide/scss/core/_core-forms.scss */
   form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
   form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="checkbox"], form fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
   form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"], [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
@@ -1214,7 +1193,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"], 
   }
 }
 
-/* line 328, styleguide/scss/core/_core-forms.scss */
+/* line 320, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"]:checked,
 form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="checkbox"]:checked, form fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"]:checked,
 form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"]:checked, [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"]:checked,
@@ -1224,7 +1203,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"]:c
   border: none;
 }
 
-/* line 339, styleguide/scss/core/_core-forms.scss */
+/* line 331, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"][disabled],
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"][disabled],
 form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="radio"][disabled],
@@ -1241,7 +1220,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"][d
   cursor: not-allowed;
 }
 
-/* line 348, styleguide/scss/core/_core-forms.scss */
+/* line 340, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="file"], [role="form"] fieldset [role="file"] {
   display: inline-block;
   min-width: 50%;
@@ -1252,13 +1231,13 @@ form fieldset [role="file"], [role="form"] fieldset [role="file"] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 348, styleguide/scss/core/_core-forms.scss */
+  /* line 340, styleguide/scss/core/_core-forms.scss */
   form fieldset [role="file"], [role="form"] fieldset [role="file"] {
     border-width: 0.08rem;
   }
 }
 
-/* line 367, styleguide/scss/core/_core-forms.scss */
+/* line 359, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"], [role="form"] fieldset [role="listbox"] {
   display: inline-block;
   min-width: 50%;
@@ -1275,25 +1254,25 @@ form fieldset [role="listbox"], [role="form"] fieldset [role="listbox"] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 367, styleguide/scss/core/_core-forms.scss */
+  /* line 359, styleguide/scss/core/_core-forms.scss */
   form fieldset [role="listbox"], [role="form"] fieldset [role="listbox"] {
     border-width: 0.08rem;
   }
 }
 
-/* line 391, styleguide/scss/core/_core-forms.scss */
+/* line 383, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"][multiple], [role="form"] fieldset [role="listbox"][multiple] {
   background: none;
   padding: 0;
   overflow: hidden;
 }
 
-/* line 398, styleguide/scss/core/_core-forms.scss */
+/* line 390, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select::-ms-expand, [role="form"] fieldset [role="listbox"] select::-ms-expand {
   display: none;
 }
 
-/* line 403, styleguide/scss/core/_core-forms.scss */
+/* line 395, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select, [role="form"] fieldset [role="listbox"] select {
   width: 100%;
   max-width: 100%;
@@ -1310,24 +1289,24 @@ form fieldset [role="listbox"] select, [role="form"] fieldset [role="listbox"] s
   color: #2b303a;
 }
 
-/* line 423, styleguide/scss/core/_core-forms.scss */
+/* line 415, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select:focus, [role="form"] fieldset [role="listbox"] select:focus {
   outline: none;
 }
 
-/* line 429, styleguide/scss/core/_core-forms.scss */
+/* line 421, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select::-ms-expand, [role="form"] fieldset [role="listbox"] select::-ms-expand {
   background-color: transparent;
   border: 0;
 }
 
-/* line 435, styleguide/scss/core/_core-forms.scss */
+/* line 427, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select[multiple], [role="form"] fieldset [role="listbox"] select[multiple] {
   padding-right: 0;
   height: auto;
 }
 
-/* line 440, styleguide/scss/core/_core-forms.scss */
+/* line 432, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select[multiple] option, [role="form"] fieldset [role="listbox"] select[multiple] option {
   padding: 0.5rem 0.75rem;
   min-height: 1.5rem;
@@ -1335,60 +1314,60 @@ form fieldset [role="listbox"] select[multiple] option, [role="form"] fieldset [
   border-radius: 0.15rem;
 }
 
-/* line 451, styleguide/scss/core/_core-forms.scss */
+/* line 443, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"], [role="form"] fieldset ul[role="listbox"] {
   padding: 0;
   border: none;
   background: none;
 }
 
-/* line 460, styleguide/scss/core/_core-forms.scss */
+/* line 452, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] label, form fieldset .has-error label, [role="form"] fieldset[error] label, [role="form"] fieldset .has-error label {
   color: #b94a48;
 }
 
-/* line 464, styleguide/scss/core/_core-forms.scss */
+/* line 456, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] label span.field-validation-error, form fieldset .has-error label span.field-validation-error, [role="form"] fieldset[error] label span.field-validation-error, [role="form"] fieldset .has-error label span.field-validation-error {
   display: inline-block;
   padding-top: 0.75rem;
 }
 
-/* line 469, styleguide/scss/core/_core-forms.scss */
+/* line 461, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] label span.field-validation-error:empty, form fieldset .has-error label span.field-validation-error:empty, [role="form"] fieldset[error] label span.field-validation-error:empty, [role="form"] fieldset .has-error label span.field-validation-error:empty {
   display: none;
 }
 
-/* line 476, styleguide/scss/core/_core-forms.scss */
+/* line 468, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] .select-field-wrapper, form fieldset[error] .input-field-wrapper, form fieldset[error] .textarea-field-wrapper, form fieldset .has-error .select-field-wrapper, form fieldset .has-error .input-field-wrapper, form fieldset .has-error .textarea-field-wrapper, [role="form"] fieldset[error] .select-field-wrapper, [role="form"] fieldset[error] .input-field-wrapper, [role="form"] fieldset[error] .textarea-field-wrapper, [role="form"] fieldset .has-error .select-field-wrapper, [role="form"] fieldset .has-error .input-field-wrapper, [role="form"] fieldset .has-error .textarea-field-wrapper {
   border-color: #b94a48;
 }
 
-/* line 480, styleguide/scss/core/_core-forms.scss */
+/* line 472, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] .select-field-wrapper input, form fieldset[error] .select-field-wrapper select, form fieldset[error] .select-field-wrapper textarea, form fieldset[error] .input-field-wrapper input, form fieldset[error] .input-field-wrapper select, form fieldset[error] .input-field-wrapper textarea, form fieldset[error] .textarea-field-wrapper input, form fieldset[error] .textarea-field-wrapper select, form fieldset[error] .textarea-field-wrapper textarea, form fieldset .has-error .select-field-wrapper input, form fieldset .has-error .select-field-wrapper select, form fieldset .has-error .select-field-wrapper textarea, form fieldset .has-error .input-field-wrapper input, form fieldset .has-error .input-field-wrapper select, form fieldset .has-error .input-field-wrapper textarea, form fieldset .has-error .textarea-field-wrapper input, form fieldset .has-error .textarea-field-wrapper select, form fieldset .has-error .textarea-field-wrapper textarea, [role="form"] fieldset[error] .select-field-wrapper input, [role="form"] fieldset[error] .select-field-wrapper select, [role="form"] fieldset[error] .select-field-wrapper textarea, [role="form"] fieldset[error] .input-field-wrapper input, [role="form"] fieldset[error] .input-field-wrapper select, [role="form"] fieldset[error] .input-field-wrapper textarea, [role="form"] fieldset[error] .textarea-field-wrapper input, [role="form"] fieldset[error] .textarea-field-wrapper select, [role="form"] fieldset[error] .textarea-field-wrapper textarea, [role="form"] fieldset .has-error .select-field-wrapper input, [role="form"] fieldset .has-error .select-field-wrapper select, [role="form"] fieldset .has-error .select-field-wrapper textarea, [role="form"] fieldset .has-error .input-field-wrapper input, [role="form"] fieldset .has-error .input-field-wrapper select, [role="form"] fieldset .has-error .input-field-wrapper textarea, [role="form"] fieldset .has-error .textarea-field-wrapper input, [role="form"] fieldset .has-error .textarea-field-wrapper select, [role="form"] fieldset .has-error .textarea-field-wrapper textarea {
   color: #b94a48;
 }
 
-/* line 486, styleguide/scss/core/_core-forms.scss */
+/* line 478, styleguide/scss/core/_core-forms.scss */
 form fieldset[error]:empty, form fieldset .has-error:empty, [role="form"] fieldset[error]:empty, [role="form"] fieldset .has-error:empty {
   display: none;
 }
 
-/* line 494, styleguide/scss/core/_core-forms.scss */
+/* line 486, styleguide/scss/core/_core-forms.scss */
 form fieldset[success] label, [role="form"] fieldset[success] label {
   color: #468847;
 }
 
-/* line 499, styleguide/scss/core/_core-forms.scss */
+/* line 491, styleguide/scss/core/_core-forms.scss */
 form fieldset[success] .select-field-wrapper, form fieldset[success] .input-field-wrapper, form fieldset[success] .textarea-field-wrapper, [role="form"] fieldset[success] .select-field-wrapper, [role="form"] fieldset[success] .input-field-wrapper, [role="form"] fieldset[success] .textarea-field-wrapper {
   border-color: #468847;
 }
 
-/* line 503, styleguide/scss/core/_core-forms.scss */
+/* line 495, styleguide/scss/core/_core-forms.scss */
 form fieldset[success] .select-field-wrapper input, form fieldset[success] .select-field-wrapper select, form fieldset[success] .select-field-wrapper textarea, form fieldset[success] .input-field-wrapper input, form fieldset[success] .input-field-wrapper select, form fieldset[success] .input-field-wrapper textarea, form fieldset[success] .textarea-field-wrapper input, form fieldset[success] .textarea-field-wrapper select, form fieldset[success] .textarea-field-wrapper textarea, [role="form"] fieldset[success] .select-field-wrapper input, [role="form"] fieldset[success] .select-field-wrapper select, [role="form"] fieldset[success] .select-field-wrapper textarea, [role="form"] fieldset[success] .input-field-wrapper input, [role="form"] fieldset[success] .input-field-wrapper select, [role="form"] fieldset[success] .input-field-wrapper textarea, [role="form"] fieldset[success] .textarea-field-wrapper input, [role="form"] fieldset[success] .textarea-field-wrapper select, [role="form"] fieldset[success] .textarea-field-wrapper textarea {
   color: #468847;
 }
 
-/* line 511, styleguide/scss/core/_core-forms.scss */
+/* line 503, styleguide/scss/core/_core-forms.scss */
 form fieldset [disabled],
 form fieldset [readonly], [role="form"] fieldset [disabled],
 [role="form"] fieldset [readonly] {
@@ -1396,12 +1375,12 @@ form fieldset [readonly], [role="form"] fieldset [disabled],
   opacity: 1;
 }
 
-/* line 518, styleguide/scss/core/_core-forms.scss */
+/* line 510, styleguide/scss/core/_core-forms.scss */
 form fieldset [disabled], [role="form"] fieldset [disabled] {
   cursor: not-allowed;
 }
 
-/* line 522, styleguide/scss/core/_core-forms.scss */
+/* line 514, styleguide/scss/core/_core-forms.scss */
 form fieldset [disabled] input, form fieldset [disabled] textarea, [role="form"] fieldset [disabled] input, [role="form"] fieldset [disabled] textarea {
   color: #ababab;
   cursor: not-allowed;
