--- a/styleguide/scss/core/_core-media.scss
+++ b/styleguide/scss/core/_core-media.scss
@@ -32,4 +32,21 @@
 // STYLES
 //-----------------------------------------------------------------------//
 
-// TBD
+// Remove gap between elements and the bottom of their containers
+audio,
+canvas,
+img,
+svg,
+video { vertical-align: middle; }
+
+// Fluid images
+img {
+
+    max-width: 100%;
+    -ms-interpolation-mode: bicubic;
+}
+
+// Non-fluid images if you specify `width` and/or `height` attributes
+img[width],
+img[height] { max-width: none; }
+
